// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductQuantityPicker stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  class="space-y-2"
>
  <label
    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity"
  >
    Quantity
  </label>
  <div
    class="inline-flex items-center border border-input rounded-none"
  >
    <button
      aria-label="Decrement Quantity for Classic T-Shirt"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
      disabled=""
    >
      −
    </button>
    <input
      aria-label="Quantity"
      class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      min="1"
      step="1"
      type="number"
      value="1"
    />
    <button
      aria-label="Increment Quantity for Classic T-Shirt"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
    >
      +
    </button>
  </div>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > LowStockWarning story renders and matches snapshot 1`] = `
<div
  class="space-y-2"
>
  <label
    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity"
  >
    Quantity
  </label>
  <div
    class="inline-flex items-center border border-input rounded-none"
  >
    <button
      aria-label="Decrement Quantity for Limited Edition Jacket"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
    >
      −
    </button>
    <input
      aria-label="Quantity"
      class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      min="1"
      step="1"
      type="number"
      value="5"
    />
    <button
      aria-label="Increment Quantity for Limited Edition Jacket"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
    >
      +
    </button>
  </div>
  <p
    aria-live="polite"
    class="text-sm leading-none text-left text-destructive font-medium"
    role="alert"
  >
    Only 3 left!
  </p>
</div>
`;

exports[`ProductQuantityPicker stories snapshot > OutOfStock story renders and matches snapshot 1`] = `
<div
  class="space-y-2"
>
  <label
    class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 text-base font-semibold leading-6 text-card-foreground"
    data-slot="label"
    for="quantity"
  >
    Quantity
  </label>
  <div
    class="inline-flex items-center border border-input rounded-none"
  >
    <button
      aria-label="Decrement Quantity for Sold Out Product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-decrement"
      disabled=""
    >
      −
    </button>
    <input
      aria-label="Quantity"
      class="w-9 text-center text-sm font-semibold leading-normal text-foreground border-0 bg-transparent focus:outline-none focus:ring-0 disabled:opacity-50 disabled:cursor-not-allowed [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
      disabled=""
      min="1"
      step="1"
      type="number"
      value="1"
    />
    <button
      aria-label="Increment Quantity for Sold Out Product"
      class="px-2.5 py-1.5 text-base font-semibold leading-normal text-foreground hover:bg-muted transition-colors focus:outline-none focus:ring-2 focus:ring-primary rounded-none disabled:opacity-50 disabled:cursor-not-allowed"
      data-testid="quantity-increment"
      disabled=""
    >
      +
    </button>
  </div>
  <p
    aria-live="polite"
    class="text-sm leading-none text-left text-destructive font-medium"
    role="alert"
  >
    Out of stock for Sold Out Product
  </p>
</div>
`;
